--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -1,5 +1,5 @@
 .home{
-    box-shadow: rgba(0,0,0,.2)  0 1px 5px 0px;;
+    box-shadow: rgba(0,0,0,.2)  0 1px 5px 0px;
 }
 .link {
     text-decoration: none;
