下拉菜单折叠

--- a/src/components/Dropdown/styles.css
+++ b/src/components/Dropdown/styles.css
@@ -1,5 +1,5 @@
 .main_title {
-    color: #1890FF;
+    color: white;
     display: inline-flex;
     height: 30px;
     line-height: 30px;
@@ -8,19 +8,24 @@
     cursor: pointer;
 }
 
+.main_title:hover {
+    color: #1890FF;
+}
+
 .space {
     margin-left: 5px;
 }
 
 .drop_list {
-    box-shadow: rgba(0,0,0,.2)  0 1px 5px 0px;
+    box-shadow: rgba(0, 0, 0, .2) 0 1px 5px 0px;
     background-color: white;
     position: absolute;
     top: 30px;
     left: 0;
     min-width: 80px;
 }
-.item:hover{
+
+.item:hover {
     background-color: #4da7f3;
     color: white;
 }
