--- a/public/iconfont/iconfont.css
+++ b/public/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2978314 */
-  src: url('iconfont.woff2?t=1638321473533') format('woff2'),
-       url('iconfont.woff?t=1638321473533') format('woff'),
-       url('iconfont.ttf?t=1638321473533') format('truetype');
+  src: url('iconfont.woff2?t=1638328259503') format('woff2'),
+       url('iconfont.woff?t=1638328259503') format('woff'),
+       url('iconfont.ttf?t=1638328259503') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,78 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-shezhi:before {
+  content: "\e600";
+}
+
+.icon-31wode:before {
+  content: "\e601";
+}
+
+.icon-31shezhi:before {
+  content: "\e602";
+}
+
+.icon-wode:before {
+  content: "\e8a0";
+}
+
+.icon-jiantoushang:before {
+  content: "\e62d";
+}
+
+.icon-jiantouyou:before {
+  content: "\e62e";
+}
+
+.icon-jiantouxia:before {
+  content: "\e62f";
+}
+
+.icon-shouye:before {
+  content: "\e630";
+}
+
+.icon-gouwuche:before {
+  content: "\e70b";
+}
+
+.icon-zuojiantou:before {
+  content: "\e642";
+}
+
+.icon-shouye1:before {
+  content: "\e605";
+}
+
+.icon-wode1:before {
+  content: "\e818";
+}
+
+.icon-bofangguangpan:before {
+  content: "\e6a5";
+}
+
+.icon-dubiyinxiao:before {
+  content: "\e6a6";
+}
+
+.icon-bofang:before {
+  content: "\e6a7";
+}
+
+.icon-ermai:before {
+  content: "\e6a8";
+}
+
+.icon-tiaojie:before {
+  content: "\e6a9";
+}
+
+.icon-shengyin:before {
+  content: "\e6aa";
 }
 
 .icon-xiangxiajiantou:before {
