--- a/src/components/Menu/styles.css
+++ b/src/components/Menu/styles.css
@@ -1,28 +1,59 @@
 .menu {
     display: inline-block;
     min-width: 150px;
-    /*min-height: 500px;*/
     background-color: #414345;
     overflow: auto;
     cursor: pointer;
+    border: 1px solid #cdc9c9;
 }
+
 .treeItem {
     background-color: #001529;
     color: #a8a5a5;
-    width: 100%;
-    height: 50px;
     line-height: 50px;
     text-align: center;
     position: relative;
 }
-.treeItem_child{
+
+.dark_hover{
+    width: 100%;
+    height: 50px;
+}
+.light_hover{
+    width: 100%;
+    height: 50px;
+}
+
+.treeItem_child {
     background-color: #0a0a0a;
 }
-.treeItem:hover{
-    background-color:#1890FF;
-color: white;
+
+.dark_hover:hover {
+    background-color: #1f8aef;
+/*    border-right: 2px solid #1890FF;*/
+    color: white;
 }
+
+.light_hover:hover {
+    background-color: #72a7db;
+    /*    border-right: 2px solid #1890FF;*/
+    color: white;
+}
+
 .menu_icon {
     position: absolute;
     right: 10px;
+}
+
+.dark_theme_color{
+    background-color: #414345;
+}
+.light_theme_color{
+    background-color: #ffffff;
+}
+.dark_theme_child_color{
+    background-color: #0a0a0a;
+}
+.light_theme_child_color{
+    background-color: #e8e5e5;
 }
