--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,7 +1,6 @@
 .buttonBaseStyle {
-    width: 70px;
     height: 30px;
-    background-color: #40a9ff;
+    background-color: #4569d4;
     border: none;
     border-radius: 5px;
     color: white
